--- a/index.html
+++ b/index.html
@@ -3,19 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Malla Interactiva</title>
+    <title>Mi Malla Curricular Interactiva</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Mi Malla Interactiva</h1>
-    <div class="grid-container">
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
-        <div class="grid-item"></div>
+    <h1>Mi Avance Curricular de Contaduría Pública</h1>
+    
+    <div class="malla-curricular">
+        <div class="semestre">
+            <h2>Semestre I</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="1">Introducción a la Contabilidad <span class="prelada">(Prel.: Contabilidad Básica I)</span></div>
+                <div class="materia" data-semestre="1">Comunicación Humana</div>
+                <div class="materia" data-semestre="1">Histórico Antropológica</div>
+                <div class="materia" data-semestre="1">Análisis Matemático</div>
+                <div class="materia" data-semestre="1">Orientación I</div>
+                <div class="materia" data-semestre="1">Práctica Profesional I</div>
+            </div>
         </div>
+
+        <div class="semestre">
+            <h2>Semestre II</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="2">Contabilidad Básica I <span class="prelada">(Prel.: Contabilidad Básica II)</span></div>
+                <div class="materia" data-semestre="2">Fundamentos de Economía</div>
+                <div class="materia" data-semestre="2">Fundamentos de Administración</div>
+                <div class="materia" data-semestre="2">Estadística</div>
+                <div class="materia" data-semestre="2">Legislación Organizacional I</div>
+            </div>
+        </div>
+
+        <div class="semestre">
+            <h2>Semestre III</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="3">Contabilidad Básica II <span class="prelada">(Prel.: Contabilidad Intermedia)</span></div>
+                <div class="materia" data-semestre="3">Ecología Científica</div>
+                <div class="materia" data-semestre="3">Administración General</div>
+                <div class="materia" data-semestre="3">Sistema de Información</div>
+                <div class="materia" data-semestre="3">Legislación Organizacional II</div>
+                <div class="materia" data-semestre="3">Autodesarrollo</div>
+            </div>
+        </div>
+
+        <div class="semestre">
+            <h2>Semestre IV</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="4">Contabilidad Intermedia <span class="prelada">(Prel.: Contabilidad Avanzada)</span></div>
+                <div class="materia" data-semestre="4">Contabilidad de Costos <span class="prelada">(Prel.: Gestión de Costos)</span></div>
+                <div class="materia" data-semestre="4">Administración Estratégica</div>
+                <div class="materia" data-semestre="4">Administración Financiera</div>
+                <div class="materia" data-semestre="4">Legislación Tributaria <span class="prelada">(Prel.: Tributos)</span></div>
+                <div class="materia" data-semestre="4">Electiva I</div>
+            </div>
+        </div>
+
+        <div class="semestre">
+            <h2>Semestre V</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="5">Contabilidad Avanzada <span class="prelada">(Prel.: Análisis de Estados Financieros)</span></div>
+                <div class="materia" data-semestre="5">Gestión de Costos</div>
+                <div class="materia" data-semestre="5">Auditoría I</div>
+                <div class="materia" data-semestre="5">Investigación de Operaciones</div>
+                <div class="materia" data-semestre="5">Tributos</div>
+                <div class="materia" data-semestre="5">PP II. Contabilidad / Tributos Pasantías</div>
+                <div class="materia" data-semestre="5">Servicio Comunitario</div>
+            </div>
+        </div>
+
+        <div class="semestre">
+            <h2>Semestre VI</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="6">Contabilidad y Finanzas Públicas</div>
+                <div class="materia" data-semestre="6">Gestión Presupuestaria</div>
+                <div class="materia" data-semestre="6">Auditoría II</div>
+                <div class="materia" data-semestre="6">Análisis de Estados Financieros</div>
+                <div class="materia" data-semestre="6">Epistemológica</div>
+                <div class="materia" data-semestre="6">PP II. Contabilidad / Tributos Pasantías</div>
+                <div class="materia" data-semestre="6">Servicio Comunitario</div>
+            </div>
+        </div>
+
+        <div class="semestre">
+            <h2>Semestre VII</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="7">Ética de los Negocios</div>
+                <div class="materia" data-semestre="7">Proyecto</div>
+                <div class="materia" data-semestre="7">Electiva II</div>
+                <div class="materia" data-semestre="7">Seminario de Investigación Contable I</div>
+                <div class="materia" data-semestre="7">Orientación II</div>
+                <div class="materia" data-semestre="7">PP III. Auditoría y Pasantías</div>
+                <div class="materia" data-semestre="7">Servicio Comunitario</div>
+            </div>
+        </div>
+
+        <div class="semestre">
+            <h2>Semestre VIII</h2>
+            <div class="materias-container">
+                <div class="materia" data-semestre="8">Electiva III</div>
+                <div class="materia" data-semestre="8">Seminario de Investigación Contable II</div>
+                <div class="materia" data-semestre="8">PP III. Auditoría y Pasantías</div>
+                <div class="materia" data-semestre="8">Servicio Comunitario</div>
+            </div>
+        </div>
+
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
